services and alignment issues

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -41,14 +41,16 @@ font-family:'ITCLubalinGraphW01-BdCn 735023';
  
 body {padding-right:0 !important;padding-left:0 !important;}
 
+
+
 #top {background-color:#000000;height:70px;background-image:url('bg-top.png') repeat-x 0 0;position:relative;top:0;left:0;z-index:-1;}
 .navbar-inverse .navbar-inner {background-color:#000000 !important;padding-bottom:0 !important;}
 
 
 h1, h2, h3 {color:#000000;font-family:'ITCLubalinGraphW01-XLt', serif !important;line-height:1.15em;margin-top:2em;}
 h1, h1#body_content_title {font-family:'ITCLubalinGraphW01-XLt', serif !important;font-size:38px !important;margin-top:1em;}
-.home h1 {font-size:48px;font-family: 'ITCLubalinGraphW01-XLt', serif !important;text-align:center;line-height:1.15em;margin-bottom:1em;margin-top:1em;font-weight:100;}
-.home.lead {color:#000000;font-size:20px;line-height: 1.25em;}
+.home h1 {margin-left:-42px;font-weight:100 !important;font-size:30px !important;font-family:arial/*font-family:'ITCLubalinGraphW01-Bk'*/, sans-serif !important;text-align:center;line-height:1.15em;margin-bottom:1em;margin-top:1em;font-weight:100;}
+.home.lead {color:#000000;font-size:20px;line-height: 1.25em;margin-left:205px;}
 
 .lead {color:#000000;font-size:16px !important;line-height: 1.25em !important;}
 .white_text {color:#ffffff !important;}
@@ -56,7 +58,11 @@ h1, h1#body_content_title {font-family:'ITCLubalinGraphW01-XLt', serif !importan
 .l2 h1 em {font-style: italic;}
 #say-metre {font-family:Times, serif !important;}
 strong.larger {font-size:18px;color:#b9dba0;}
+/*.span3 p {font-size:12px;width:370px !important;margin-right:20px !important;}*/
 p {margin-bottom:1.25em !important;}
+/*.span3 {border:1px solid red;}*/
+.span4 {margin-right:0 !important;}
+.row {margin-left:0px !important;}
 
 
 #page {padding-bottom:100px;min-height: 350px;}
@@ -92,13 +98,16 @@ footer {padding:20px;color:#ffffff;margin-top:100px;opacity:0.7;}
 	
 	#top {height:70px;}
  }
+
+
  
 /* Portrait tablet to landscape and desktop */
 @media (min-width: 768px) and (max-width: 979px) {
-
+	.span3 {width:100% !important;}
 	#top {height:70px;}
 	.home h1 {font-size:92px;line-height:1.5em;}
 	.brand {margin-top:6px !important;width:63px !important;}
+
  }
  
 /* Landscape phone to portrait tablet */
@@ -108,6 +117,7 @@ footer {padding:20px;color:#ffffff;margin-top:100px;opacity:0.7;}
 	.home h1 {font-size:72px;line-height:1em;}
 	.brand {margin-top:6px !important;width:63px !important;}
 	.home h1 {line-height:1em;font-size:72px;}
+	.span3 p {font-size:12px;width:100%;}
  }
  
 /* Landscape phones and down */
